--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <!-- nav links -->
         <div class="nav__links">
           <a href="#" class="nav__link">Home</a>
-          <a href="#" class="nav__link">Book</a>
-          <a href="#" class="nav__link">About</a>
+          <a href="#services" class="nav__link">Book</a>
+          <a href="#about" class="nav__link">About</a>
           <a href="#" class="nav__link">Contact Us</a>
         </div>
       </div>
@@ -36,9 +36,11 @@
         <h2 class="header__subtitle">The Good Ol' Fashioned Way</h2>
       </div>
 
-      <button href="#" class="header__btn">Book a Venue</button>
+      <button href="#services" class="header__btn">Book a Venue</button>
     </div>
     <!-- end of header -->
+
+    <!-- services -->
     <section id="services">
       <h3 class="services__title">Your Dream Venue</h3>
       <p class="section-lead">
