--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
         <!-- nav links -->
         <div class="nav__links">
-          <a href="#" class="nav__link">Home</a>
-          <a href="#services" class="nav__link">Book</a>
+          <a href="#services" class="nav__link">Reserve</a>
           <a href="#about" class="nav__link">About</a>
           <a href="#" class="nav__link">Contact Us</a>
         </div>
@@ -36,7 +35,7 @@
         <h2 class="header__subtitle">The Good Ol' Fashioned Way</h2>
       </div>
 
-      <button href="#services" class="header__btn">Book a Venue</button>
+      <a href="#services" class="header__btn">Book a Venue</a>
     </div>
     <!-- end of header -->
 
@@ -80,11 +79,41 @@
         We appreciate the little things,<br />because we know you do too
       </h3>
       <p class="about__subtitle">
-        Here at Old Barn Farm, Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa,
-        exercitationem. Vel repellendus ex illum quasi modi nisi quas aut earum
-        optio provident fugiat quia sequi expedita, incidunt nemo, saepe
-        reiciendis.
+        Here at Old Barn Farm, Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Culpa, exercitationem. Vel repellendus ex illum quasi
+        modi nisi quas aut earum optio provident fugiat quia sequi expedita,
+        incidunt nemo, saepe reiciendis.
       </p>
+    </section>
+    <!-- end of about -->
+
+    <!-- Contact -->
+    <section id="contact">
+      <h1 class="contact__title">Contact Us</h1>
+      <!-- contact form -->
+      <div class="contact">
+        <form action="#" class="contact__form">
+          <h1 class="contact-form__title">
+            We'd Love to Hear from <span class="gold">You</span>
+          </h1>
+
+          <label for="Name">Name</label>
+          <input type="text" placeholder="Name" class="contact__input" />
+
+          <label for="Email">Email</label>
+          <input type="email" placeholder="Email" class="contact__input" />
+
+          <label for="Subject">About</label>
+          <input type="text" placeholder="About" class="contact__input" />
+
+          <label>Message</label>
+          <textarea name="" id="" cols="30" rows="15"></textarea>
+
+          <div class="submit-btn">
+            <btn class="submit" type="submit">Submit</btn>
+          </div>
+        </form>
+      </div>
     </section>
   </body>
 </html>
