--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="home.css" />
     <title>Old Barn Farm</title>
+    <script type="module" src="app.js"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    </script>
   </head>
   <body>
+    
     <!-- nav bar -->
 
     <div class="container">
@@ -48,6 +52,23 @@
       </p>
       <div class="services-grid">
         <div class="service service1">
+          <div class="init">
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i> 
+          </div>
           <img src="./assets/wedding.JPEG" alt="Wedding" class="service__img" />
           <i class="ti-bar-chart"></i>
           <h4 class="service__title">Wedding</h4>
@@ -55,6 +76,23 @@
         </div>
 
         <div class="service service2">
+          <div class="init">
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i> 
+          </div>
           <img src="./assets/party.jpeg" alt="Party" class="service__img" />
 
           <i class="ti-light-bulb"></i>
@@ -63,6 +101,23 @@
         </div>
 
         <div class="service service3">
+          <div class="init">
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i>
+            <i></i> 
+          </div>
           <img src="./assets/other.JPEG" alt="Other" class="service__img" />
 
           <i class="ti-money"></i>
@@ -114,6 +169,11 @@
           </div>
         </form>
       </div>
+      <div id="map"></div>
+
+    <!-- prettier-ignore -->
+    <script>(g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})
+        ({key: "AIzaSyAt2NMMSSVwCde04iTKfpVl8Hn9TL1tGZQ", v: "beta"});</script>
     </section>
   </body>
 </html>
