--- a/index.html
+++ b/index.html
@@ -52,23 +52,7 @@
       </p>
       <div class="services-grid">
         <div class="service service1">
-          <div class="init">
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i> 
-          </div>
+          
           <img src="./assets/wedding.JPEG" alt="Wedding" class="service__img" />
           <i class="ti-bar-chart"></i>
           <h4 class="service__title">Wedding</h4>
@@ -76,28 +60,13 @@
         </div>
 
         <div class="service service2">
-          <div class="init">
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i> 
-          </div>
           <img src="./assets/party.jpeg" alt="Party" class="service__img" />
 
           <i class="ti-light-bulb"></i>
           <h4 class="service__title">Party</h4>
           <button href="#" class="service__btn">Book</button>
+          <canvas id="canvas"></canvas>
+
         </div>
 
         <div class="service service3">
